Slightly improve teleport args